@@ -24,6 +24,10 @@
 // key: compiler.err.cant.ref.non.effectively.final.var
 // key: compiler.misc.inner.cls
 // key: compiler.misc.lambda
+// key: compiler.misc.guard
+// key: compiler.misc.feature.pattern.switch
+// key: compiler.warn.preview.feature.use.plural
+// options: --enable-preview -source ${jdk.version} -Xlint:preview
 
 class CantRefNonEffectivelyFinalVar {
     void test() {
@@ -40,5 +44,12 @@ class CantRefNonEffectivelyFinalVar {
         int i = 0;
         SAM s = ()-> { int j = i; };
         i++;
+    }
+
+    void test3(Object o, int i) {
+        switch (o) {
+            case String s && s.length() == i++: break;
+            default: break;
+        }
     }
 }
